--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "express": "^4.18.1",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.21.3"
+    "sequelize": "^6.21.3",
+    "swagger-ui-express": "^4.5.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.6.2",
+    "@types/swagger-ui-express": "^4.1.3",
     "concurrently": "^7.3.0",
     "nodemon": "^2.0.19",
     "typescript": "^4.7.4"
